<resources>
    <string name="app_name">SwishTicker</string>
    <string name="versus">vs</string>
    <string name="new_team">New Team</string>
    <string name="start_game">Start Game</string>
    <string name="my_games">My Games</string>
    <string name="my_teams">My Team</string>
    <string name="about">About</string>
    <string name="start">Start</string>
    <string name="select_team_name">New or Existing Team Name</string>
    <string name="select_away_team">Select Away Team</string>
    <string name="select_my_team">Select My Team</string>
    <string name="team_does_not_exist">%1$s does not exist</string>
    <string name="create_now">Create Now</string>
    <string name="must_select_home_team">You must select a home team</string>
    <string name="onePoint">1pt</string>
    <string name="twoPoint">2pt</string>
    <string name="foul">foul</string>
    <string name="threePoint">3pt</string>
    <string name="dash">-</string>
    <string name="team">Team</string>
    <string name="actions">Actions</string>
    <string name="team_stats">%1$s Stats</string>
    <string name="fg">FG</string>
    <string name="foul_title">F</string>
    <string name="won">won</string>
    <string name="lost">lost</string>
    <string name="games">Games</string>
    <string name="stats">Stats</string>
    <string name="fg_percent">FG%</string>
    <string name="twoPoint_percent">2pt%</string>
    <string name="threePoint_percent">3pt%</string>
    <string name="ppg">ppg</string>
    <string name="not_applicable">-</string>
    <string name="stats_fraction">%1$d/%2$d</string>
    <string name="stats_percent">%.1f</string>
    <string name="add_new_player">Add New Player</string>
    <string name="menu">Menu</string>
    <string name="previous_period">Previous Period</string>
    <string name="next_period">Next Period</string>
    <string name="finish_game">Finish Game</string>
    <string name="finish_game_action">Finish Game?</string>
    <string name="cannot_resume">You will not be able to resume</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="player_name">Player Name</string>
    <string name="add_to_team">Add To Team</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="delete_action">Delete Action?</string>
    <string name="end">End</string>
    <string name="resume">Resume</string>
    <string name="end_game">End Game?</string>
    <string name="delete_game">Delete Game</string>
    <string name="delete_game_question">Delete Game?</string>
    <string name="players">Players</string>
    <string name="edit_name">Edit Name</string>
    <string name="team_name">Team Name</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
</resources>
